--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 asgiref==3.2.10
 astroid==2.4.2
+cffi==1.14.2
+cryptography==2.9.2
 Django==3.1.1
+django-environ==0.4.5
 djangorestframework==3.11.1
 isort==5.5.0
+jwt==1.0.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+numpy==1.19.1
+Pillow==7.2.0
+psycopg2-binary==2.8.5
+pycparser==2.20
+PyJWT==1.7.1
 pylint==2.6.0
 pytz==2020.1
 six==1.15.0
