--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,36 @@
+appdirs==1.4.4
 asgiref==3.2.10
 astroid==2.4.2
+black==20.8b1
 cffi==1.14.2
+click==7.1.2
 cryptography==2.9.2
+dj-database-url==0.5.0
 Django==3.1.1
+django-cors-headers==3.5.0
 django-environ==0.4.5
+django-heroku==0.3.1
 djangorestframework==3.11.1
+gunicorn==20.0.4
 isort==5.5.0
 jwt==1.0.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mypy-extensions==0.4.3
 numpy==1.19.1
+pathspec==0.8.0
 Pillow==7.2.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.5
 pycparser==2.20
 PyJWT==1.7.1
 pylint==2.6.0
 pytz==2020.1
+regex==2020.7.14
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
+typing-extensions==3.7.4.3
+whitenoise==5.2.0
 wrapt==1.12.1
